Fixed issue #4251 were word-break issues in Outlook clients which were causing major readability issues. - Updated word-break style settings - Added .break-all class, which can be used to make sure content does not expand beyond its container. - Tested in all major email clients for compatibility using Litmus

--- a/modules/system/models/mailbrandsetting/custom.less
+++ b/modules/system/models/mailbrandsetting/custom.less
@@ -13,11 +13,10 @@ body {
     line-height: 1.4;
     margin: 0;
     -moz-hyphens: auto;
-    -ms-word-break: break-all;
+    -ms-word-break: break-word;
     width: 100% !important;
     -webkit-hyphens: auto;
     -webkit-text-size-adjust: none;
-    word-break: break-all;
     word-break: break-word;
 }
 
@@ -75,6 +74,9 @@ code {
     color: @text-color;
     font-size: 16px;
     line-height: 1.5em;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    word-break: break-all;
 }
 
 p.sub {
@@ -83,6 +85,12 @@ p.sub {
 
 img {
     max-width: 100%;
+}
+
+.break-all, .break-all *{
+    -ms-word-break: break-all;
+    word-break: break-word;
+    word-break: break-all;
 }
 
 /* Layout */
